--- a/AngularBase.Ui/src/app/modules/products/products.component.html
+++ b/AngularBase.Ui/src/app/modules/products/products.component.html
@@ -1,5 +1,4 @@
-test
-<!--<p>
+<p>
   Product component {{ product.name }} !
 </p>
 
@@ -24,5 +23,5 @@ test
       <td>{{ item.name }}</td>
     </tr>
   </tbody>
-</table>-->
+</table>
 
